# Chrodis

./: .gitignore  README.md  pyproject.toml
app/: dev.mjs  index.html  main.cjs  package-lock.json  package.json  preload.cjs  tsconfig.json  vite.config.ts
app/assets/: chrodis-icon.icns
app/public/: chrodis-worklet.js
app/scripts/: after-pack.cjs
app/src/: main.ts  preload.ts
app/test/: geometry.test.mjs
docs/: PLAN.md  SHORTCUTS.md  TODO.md
presets/: builtin.json
presets/初始化/: flexis-init.json  harmonis-init.json  padis-init.json  serumis-init.json  sytrix-init.json
presets/合成器/: harmonis-bright-pluck.json  harmonis-spectral-lead.json  lead.json  o3-lead.json  pluck-lead.json  serumis-metal-lead.json
presets/吉他/: guitar-clean.json
presets/打击乐器/: drum.json  drumis-init.json  drumis-punch-kick.json  drumis-snap-snare.json
presets/电影音效/: fx-pulse.json
presets/管弦乐器/: string-pad.json
presets/贝司/: bass.json  flexis-modern-bass.json  o3-bass.json  sub-bass.json  sytrix-digital-bass.json
presets/钢琴/: piano.json  soft-piano.json
presets/键盘乐器/: electric-keys.json  flexis-pop-keys.json  keys.json  sytrix-fm-bell.json
presets/音垫/: o3-pad.json  pad.json  padis-cinema-drone.json  padis-glimmer-pad.json  serumis-glass-pad.json
projects/mandopop-3min.chrodis/: project.json
projects/mandopop.chrodis/: project.json
projects/neon-pop-anthem.chrodis/: project.json
projects/o3.chrodis/: project.json
src/chrodis/: __init__.py  audio.py  cli.py  composer.py  effects.py  midi.py  midi_import.py  model.py  patterns.py  (+3 more)
tests/: test_chrodis.py
(+28 files in other folders)
