[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chrodis"
version = "0.1.0"
description = "A small headless Logic-like music project tool."
requires-python = ">=3.10"
authors = [{ name = "chrodis contributors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.scripts]
chrodis = "chrodis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
